 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */

VERSION 1.0.3

  - Added 'py' (Python) extension to supported import extensions

  - Project directory are now sorted

  - Double click interval have been shortened from 2 seconds to .5 seconds


VERSION 1.0.2

  - Major rewrite of the plugin.  All features that existed pre 1.0.2 should still be
    valid, except for the bugs.  That also means that all previously noted changes
    may or may not be valid in this release.
    
  - Added drag and drop support to the edit pane.
  
  - Fixed bugs with tree node synchonization where the different tree views are
    not notified of changes such as additions and removal of project files, and
    the opening and closing or project files in the edit pane.
    
  - Tree rendering on file and directory additions should be faster because the
    trees are not being rebuilt on these events.
    
  - Project viewer will ask if you want to import a file if you save it under
    the current project's root directory.
    
  - The project viewer and project can will now generate events so that other
    plugins can interact with the current project.

  - Project properties will now be stored under <settings directory>/projectviewer.  The
    plugin should move old properties files to this directory, as well as rename them.
  

VERSION 0.095

  - (DONE) (SERIOUS) ProjectViewer *won't* open any files that it thinks are 
    subscribed but aren't actually open.

  - (DONE) anytime you double click on a file... and it fails to open or close 
      a buffer.... and it isn't the current buffer.  select it or open it.
       
  - (DONE) fix ProjectViewer so that it can get jEdit events and 