@@ -16,6 +16,11 @@
 
 VERSION 1.0.3
 
+  - Project parsing does not start at jEdit start up unless the the viewer is
+    set to be displayed on start up.
+
+  - Fixed NPE when a click occurs over a non-node port of project tree
+
   - Added 'py' (Python) extension to supported import extensions
 
   - Project directory are now sorted
